--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -70,13 +70,11 @@
 			height:0px;
 			width:0px;
 		}
-		body{
+		body {
 			font-family: Comix Loud;
-			background-image:url('img/phobia-bg.png');
-			background-attachment:fixed;
-			background-position:center;
-			background-repeat:no-repeat;
-			background-size:100% 100%;
+			background-image: url('img/phobia-bg.png');
+			background-size: cover;
+			background-repeat: no-repeat;
 		}
 		#question{
 			margin:0px;
